Sign Out Logic #8 & Nav Responsiveness
Using Pinia for state managment. Refresh all you want, state won't be lost. This removes the need for the emit/props hell I started entering.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,22 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/favicon.ico" rel="icon">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Resources -->
-    <script src="https://kit.fontawesome.com/386dc5a5b8.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/386dc5a5b8.js"></script>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+          rel="stylesheet">
 
     <title>Bot Administrator</title>
 </head>
 
 <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+<div id="app"></div>
+<script src="/src/main.ts" type="module"></script>
 </body>
 
 </html>
