--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Resources -->
+    <!-- TODO: #6 -->
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/386dc5a5b8.js"></script>
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
