--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-          rel="stylesheet">
+        rel="stylesheet">
 
-    <title>Bot Administrator</title>
+    <title>SK Administrator</title>
 </head>
 
 <body>
-<div id="app"></div>
-<script src="/src/main.ts" type="module"></script>
+    <div id="app"></div>
+    <script src="/src/main.ts" type="module"></script>
 </body>
 
 </html>
