--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
     <!-- Resources -->
     <!-- TODO: #6 -->
-    <script crossorigin="anonymous" src="https://kit.fontawesome.com/386dc5a5b8.js"></script>
+    <script src="https://kit.fontawesome.com/ffc90f94bc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
